Code Refractored and solved the responsive issue on mobile phones

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,82 +1,95 @@
-body {
+/* Themes */
+
+.dark-theme {
 	background-color: hsl(222, 26%, 31%);
 	font-family: 'Spartan';
 }
 
-.body {
+.light-theme {
 	background-color: hsl(0, 0%, 90%);
 }
+
+
+/* Container */
+
+.container {
+	width: 550px;
+}
+
+
+/* Navigation Bar */
 
 .navbar {
 	margin-left: 2px;
 	margin-top: 50px;
 }
 
-.navbar-brand-1 {
+.navbar-brand {
+	font-size: 2rem;
+}
+
+.navbar-brand-light {
 	color: hsl(60, 10%, 19%) !important;
 }
 
 .theme-text {
 	color: white;
-	margin-left: 10px;
 	font-size: 10px;
+	margin-left: 10px;
 }
 
-.theme-text-1 {
+.theme-text-light {
 	color:  hsl(60, 10%, 19%);
 }
 
-.navbar-brand {
-	font-size: 2rem;
-}
+
+/* Answer Box */
 
 .ans-box {
-	overflow: auto;
-	display: flex;
 	align-items: center;
-	justify-content: flex-end;
-	padding: 20px;
 	background-color: hsl(224, 36%, 15%);
+	border-radius: 10px;
+	display: flex;
 	height: 150px;
+	justify-content: flex-end;
 	margin-top: 5px;
 	margin-bottom: 25px;
-	border-radius: 10px;
+	overflow: auto;
+	padding: 20px;
 }
 
-
-.ans-box-1 {
+.ans-box-light {
 	background-color: hsl(0, 0%, 98%);
 }
 
-h1 {
-	font-size: 2rem;
+.number-input {
 	color: white;
+	font-size: 2rem;
 }
 
-.h1-1 {
+.number-input-light {
 	color: hsl(60, 10%, 19%);
 }
 
-.container {
-	width: 550px;
-}
-
 .row {
-	width: 95%;
-	margin-top: 15px;
 	margin-bottom: 15px;
 	margin-left: auto;
 	margin-right: auto;
+	margin-top: 15px;
+	width: 95%;
 }
 
+
+/* Keypad */
+
 .keypad {
+	background-color: hsl(223, 31%, 20%);
 	border-radius: 10px;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	background-color: hsl(223, 31%, 20%);
-	padding: 10px 0;
 	margin-bottom: 50px;
+	padding: 10px 0;
 }
 
 .keypad-light {
@@ -84,28 +97,45 @@ h1 {
 }
 
 
+/* Buttons */
+
 .btn {
+	background-color: hsl(30, 25%, 89%);
 	border-radius: 8px;
-	font-weight: 700;
+	box-shadow: 1px 7px 5px hsl(28, 16%, 65%);
+	color: hsl(221, 14%, 31%);
 	font-size: 2rem;
+	font-weight: 700;
 	height: 70px;
 	width: 100%;
-	background-color: hsl(30, 25%, 89%);
-	color: hsl(221, 14%, 31%);
-	box-shadow: 1px 7px 5px hsl(28, 16%, 65%);
 }
 
-.btn-1 {
+.btn-light-mode {
 	color: hsl(60, 10%, 19%);
 	background-color: hsl(45, 7%, 89%);
 	box-shadow: 1px 7px 5px hsl(35, 11%, 61%);
 }
 
 .blue-btn {
-	font-size: 1.5rem;
-	color: white;
 	background-color: hsl(225, 21%, 49%);
 	box-shadow: 1px 7px 5px hsl(224, 28%, 35%);
+	color: white;
+	font-size: 1.5rem;
+}
+
+.blue-btn:hover {
+	color: white;
+}
+
+.red-btn {
+	background-color: hsl(6, 63%, 50%);
+	box-shadow: 1px 7px 5px hsl(6, 70%, 34%);
+	color: white;
+	font-size: 1.5rem;
+}
+
+.red-btn:hover {
+	color: white;
 }
 
 .green-btn {
@@ -113,51 +143,28 @@ h1 {
 	box-shadow: 1px 7px 5px hsl(185, 58%, 25%);
 }
 
-.red-btn {
-	font-size: 1.5rem;
-	color: white;
-	background-color: hsl(6, 63%, 50%);
-	box-shadow: 1px 7px 5px hsl(6, 70%, 34%);
-}
-
 .orange-btn {
 	background-color: hsl(25, 98%, 40%);
 	box-shadow: 1px 7px 5px hsl(25, 99%, 27%);
 }
 
-.red-btn:hover {
-	color: white;
-}
 
-.blue-btn:hover {
-	color: white;
-}
-
-@media (min-width: 476px) and (max-width: 575px) {
-
-	h1 {
-		font-size: 1.8rem;
-	}
-
-	.container {
-		width: 90vw;
-	}
-}
+/* Media Queries */
 
 @media (max-width: 475px) {
-
-	h1 {
-		font-size: 1.5rem;
-	}
 
 	.container {
 		width: 97vw;
 	}
 
+	.number-input {
+		font-size: 1.5rem;
+	}
+
 	.row {
-		width: 97%;
-		margin-top: 12px;
 		margin-bottom: 12px;
+		margin-top: 12px;
+		width: 97%;
 	}
 
 	.col-3 {
@@ -176,6 +183,18 @@ h1 {
 
 	.blue-btn {
 		font-size: 1rem;
+	}
+
+}
+
+@media (max-width: 575px) {
+
+	.container {
+		width: 90vw;
+	}
+
+	.number-input {
+		font-size: 1.8rem;
 	}
 
 }
